--- a/Thesis/bibliography/references.bib
+++ b/Thesis/bibliography/references.bib
@@ -131,3 +131,10 @@
   year={2006},
   publisher={Nature Publishing Group}
 }
+@online{Solenoid,
+  author = {Adafruit},
+  title = {{Mini Push-Pull Solenoid}},
+  year = 2018,
+  url = {https://www.adafruit.com/product/2776},
+  urldate = {2018-04-23}
+}
