--- a/Thesis/thesis-hapticDesign.tex
+++ b/Thesis/thesis-hapticDesign.tex
@@ -237,12 +237,11 @@ The main board was reverted back to that used in the solenoid prototype, the 5V 
 \end{table}
 
 \subsubsection{Assembly}
-Since the digital I/O of the Trinket could only source 20mA, four N-channel 2N7000 transistors were chosen to act as switches and current isolators for controlling power to the motors. These are labelled (N) in Figure \ref{FinalProto}
+Since each digital I/O of the Trinket could only source 20mA, four N-channel 2N7000 transistors were chosen to act as switches and current isolators for controlling power to the motors. These are labelled (N) in Figure \ref{FinalProto}
 
 Each motor was connected from the power source (5V Vcc), to the drain of the transistor. When the transistor received a signal past its bias voltage of 0.8V it was switched on. This allowed the drain-source channel to be opened and an onrush of current to flow from Vcc to the motors and through to ground.
 
-A 1N4001 diode was placed in parallel with the motor from the 5V Vcc node to the drain of the N-channel 2N7000 to protect the transistor by shorting out the onrush of back current emitted from the motor during immediate shutoff. The motor will act as an inductor; with a sudden change in current an equivalent voltage is created to keep that current flowing short term which would fry the transistor if the diode was not in place to short out this negative voltage spike. 
-
+A 1N4001 diode was placed in parallel with the motor from the 5V Vcc node to the drain of the N-channel 2N7000 to protect the transistor by shorting out the onrush of back current emitted from the motor during immediate shutoff. Principally, the motor will act as an inductor; a sudden change in current creates an equivalent voltage to keep that current flowing short term. This could fry the transistor if the diode was not in place to short out this negative voltage spike. 
 
 \begin{figure}[H]
     \includegraphics[width=\linewidth,height=\textheight,keepaspectratio]
@@ -253,9 +252,7 @@ A 1N4001 diode was placed in parallel with the motor from the 5V Vcc node to the
 
 The digital pins 5,6,9,10 (denoted with yellow and grey wires in Figure \ref{FinalProto}) output a pulse-width modulated signal to be used as triggers, or control switches, for the transistors. In order to limit the current that the digital output must source and to protect the transistor gate, a 220 Ohm resistor was connected across the digital I/O pin and the gate of the 2N7000 for each pin.
 
-As an additional manual tap tempo a push-button was added and connected to the only interrupt capable pin on the Trinket, PIN 3.
-
-An RC combination was chosen to act as a low-pass filter to protect against debounce scenarios.
+As an additional manual tap tempo option for the user to experiment with, a push-button was added and connected to the only interrupt capable pin on the Trinket, PIN 3. An RC combination was chosen to act as a low-pass filter to protect against debounce scenarios.
 
 \subsection{Software}
 
@@ -270,9 +267,12 @@ Debounce for tap tempo
 \section{Optimization}
 
 \subsection{Future Implementation}
+Though much effort went into providing an important framework for the haptic to operate smoothly from a hardware standpoint, the most important progress with the final prototype was the solidification of software framework. With the integration of delay independent state-machines performing synchronous tasks, haptic mode selection, and precise bpm control, the vibrotactile haptic is ready to enter the next phases of development. 
 
-Bluetooth/Wireless
+BLE/wireless
 
 Custom PCB
+
+Node abstraction
 
 Experiment with other vibrotactiles such as tachammer and LNA's
