--- a/Thesis/thesis-hapticDesign.tex
+++ b/Thesis/thesis-hapticDesign.tex
@@ -275,12 +275,6 @@ Debounce for tap tempo
 \section{Optimization}
 
 \subsection{Future Implementation}
-Though much effort went into providing an important framework for the haptic to operate smoothly from a hardware standpoint, the most important progress with the final prototype was the solidification of software framework. With the integration of delay independent state-machines performing synchronous tasks, haptic mode selection, and precise bpm control, the vibrotactile haptic is ready to enter the next phases of development. 
-
-BLE/wireless
-
-Custom PCB
-
-Node abstraction
+Though much effort went into providing an important framework for the haptic to operate smoothly from a hardware standpoint, the most important progress with the final prototype was the solidification of software framework. With the integration of delay independent state-machines performing synchronous tasks, haptic mode selection, and precise bpm control, the vibrotactile haptic could enter the next phases of development. This includes the addition of BLE capability, as in the single vibrotactile prototype, such that commands can be issued over a paired interface such as an app on a smartphone. Also, future work will focus on a custom PCB such that the form factor is minimized and independent node abstraction of each vibrotactile could be realized. This would allow wearers capability to place a programmable array anywhere on their body enabling wide surface area dispersion.
 
 Experiment with other vibrotactiles such as tachammer and LNA's
